--- a/BIT-BOOKSTORE/frontend/bit_bookstore/src/app/carrito-compras/carrito-compras.component.html
+++ b/BIT-BOOKSTORE/frontend/bit_bookstore/src/app/carrito-compras/carrito-compras.component.html
@@ -14,73 +14,59 @@
           </datalist>
       </div>
 
+      <div class="input-group mb-3">
+        <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Digite nombre del libro a agregar..">
+        <datalist id="datalistOptions">
+            <option value="Ivan Januario Peña Torres">
+            <option value="Marfin Lucia Contreras Gelvez">
+            <option value="Peggy Peña Contreras">
+            <option value="Azabache Peña Contreras">
+          </datalist>
+          <a href="#" class="btn background-button"><i class="bi bi-cart-plus-fill"></i>
+            Añadir al carrito</a>
+      </div>
+
+      <h5>Carrito de Compras</h5>
+
       <table class="table table-striped table-hover">
         <thead>
           <tr>
-            <th scope="col">Nombre</th>
-            <th scope="col">Direccion</th>
-            <th scope="col">Celular</th>
-            <th scope="col">Correo</th>
+            <th scope="col">Libro</th>
+            <th scope="col">Costo Unitario</th>
             <th scope="col">Opciones</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <th scope="row">Ivan Januario Peña Torres </th>
-            <td>sss</td>
-            <td>Otto</td>
-            <td>@mdo</td>
+            <th scope="row">Harry Potter y el prisioner de Azkaban</th>
+            <td>$ 34.000,00</td>
             <td>
-              <button type="button" class="btn btn-warning">
-                <i class="bi bi-pencil-square"></i>
-              </button>
               <button type="button" class="btn btn-danger">
                 <i class="bi bi-trash-fill"></i>
               </button>
             </td>
           </tr>
           <tr>
-            <th scope="row">Marfin Lucía Contreras Gelvez</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
+            <th scope="row">Harry Potter y las reliquias de la muerte</th>
+            <td>$ 47.000,00</td>
             <td>
-              <button type="button" class="btn btn-warning">
-                <i class="bi bi-pencil-square"></i>
-              </button>
               <button type="button" class="btn btn-danger">
                 <i class="bi bi-trash-fill"></i>
               </button>
             </td>
           </tr>
           <tr>
-            <th scope="row">Peggy Peña Contreras</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
+            <th>Total</th>
+            <td>$ 81.000,00</td>
             <td>
-              <button type="button" class="btn btn-warning">
-                <i class="bi bi-pencil-square"></i>
-              </button>
-              <button type="button" class="btn btn-danger">
-                <i class="bi bi-trash-fill"></i>
-              </button>
-            </td>
-          </tr>
-          <tr>
-            <th scope="row">Azabache Peña Contreras</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
-            <td>
-              <button type="button" class="btn btn-warning">
-                <i class="bi bi-pencil-square"></i>
-              </button>
-              <button type="button" class="btn btn-danger">
-                <i class="bi bi-trash-fill"></i>
-              </button>
             </td>
           </tr>
         </tbody>
       </table>
+
+      <a href="#" class="btn btn-lg btn-success"><i class="bi bi-cart-check"></i>
+        Finalizar Compra</a>
+
 
     </div>
 </div>          
