--- a/BIT-BOOKSTORE/frontend/bit_bookstore/src/app/catalogo-libros/catalogo-libros.component.html
+++ b/BIT-BOOKSTORE/frontend/bit_bookstore/src/app/catalogo-libros/catalogo-libros.component.html
@@ -9,7 +9,7 @@
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
                 <a href="#" class="btn background-button"><i class="bi bi-cart-plus-fill"></i>
-                    Añadir al carrito</a>
+                    Comprar</a>
             </div>
         </div>
 
@@ -20,7 +20,7 @@
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
                 <a href="#" class="btn background-button"><i class="bi bi-cart-plus-fill"></i>
-                    Añadir al carrito</a>
+                    Comprar</a>
             </div>
         </div>
 
@@ -31,7 +31,7 @@
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
                 <a href="#" class="btn background-button"><i class="bi bi-cart-plus-fill"></i>
-                    Añadir al carrito</a>
+                    Comprar</a>
             </div>
         </div>
 
@@ -42,7 +42,7 @@
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
                 <a href="#" class="btn background-button"><i class="bi bi-cart-plus-fill"></i>
-                    Añadir al carrito</a>
+                    Comprar</a>
             </div>
         </div>
 
@@ -53,7 +53,7 @@
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
                 <a href="#" class="btn background-button"><i class="bi bi-cart-plus-fill"></i>
-                    Añadir al carrito</a>
+                    Comprar</a>
             </div>
         </div>
 
@@ -64,7 +64,7 @@
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
                 <a href="#" class="btn background-button"><i class="bi bi-cart-plus-fill"></i>
-                    Añadir al carrito</a>
+                    Comprar</a>
             </div>
         </div>
 
@@ -75,7 +75,7 @@
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
                 <a href="#" class="btn background-button"><i class="bi bi-cart-plus-fill"></i>
-                    Añadir al carrito</a>
+                    Comprar</a>
             </div>
         </div>
 
@@ -86,7 +86,7 @@
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
                 <a href="#" class="btn background-button"><i class="bi bi-cart-plus-fill"></i>
-                    Añadir al carrito</a>
+                    Comprar</a>
             </div>
         </div>
     </div>
