--- a/BIT-BOOKSTORE/frontend/bit_bookstore/src/app/carrito-compras/carrito-compras.component.html
+++ b/BIT-BOOKSTORE/frontend/bit_bookstore/src/app/carrito-compras/carrito-compras.component.html
@@ -1,72 +1,86 @@
 <div class="container main-content">
-    <div class="row g-2" style="width: 100%">
-      <div class="titulo">
-        <h3>Venta #210 <span style="float: right">21-02-2021</span></h3>
-      </div>
-
-      <div class="input-group mb-3">
-        <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Digite nombre del cliente...">
-        <datalist id="datalistOptions">
-            <option value="Ivan Januario Peña Torres">
-            <option value="Marfin Lucia Contreras Gelvez">
-            <option value="Peggy Peña Contreras">
-            <option value="Azabache Peña Contreras">
-          </datalist>
-      </div>
-
-      <div class="input-group mb-3">
-        <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Digite nombre del libro a agregar..">
-        <datalist id="datalistOptions">
-            <option value="Ivan Januario Peña Torres">
-            <option value="Marfin Lucia Contreras Gelvez">
-            <option value="Peggy Peña Contreras">
-            <option value="Azabache Peña Contreras">
-          </datalist>
-          <a href="#" class="btn background-button"><i class="bi bi-cart-plus-fill"></i>
-            Añadir al carrito</a>
-      </div>
-
-      <h5>Carrito de Compras</h5>
-
-      <table class="table table-striped table-hover">
-        <thead>
-          <tr>
-            <th scope="col">Libro</th>
-            <th scope="col">Costo Unitario</th>
-            <th scope="col">Opciones</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">Harry Potter y el prisioner de Azkaban</th>
-            <td>$ 34.000,00</td>
-            <td>
-              <button type="button" class="btn btn-danger">
-                <i class="bi bi-trash-fill"></i>
-              </button>
-            </td>
-          </tr>
-          <tr>
-            <th scope="row">Harry Potter y las reliquias de la muerte</th>
-            <td>$ 47.000,00</td>
-            <td>
-              <button type="button" class="btn btn-danger">
-                <i class="bi bi-trash-fill"></i>
-              </button>
-            </td>
-          </tr>
-          <tr>
-            <th>Total</th>
-            <td>$ 81.000,00</td>
-            <td>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-
-      <a href="#" class="btn btn-lg btn-success"><i class="bi bi-cart-check"></i>
-        Finalizar Compra</a>
-
-
+  <div class="row g-2" style="width: 100%">
+    <div class="titulo">
+      <h3>Venta #210 <span style="float: right">21-02-2021</span></h3>
     </div>
-</div>          
+
+    <div class="input-group mb-3">
+      <input
+        class="form-control"
+        list="datalistOptions"
+        id="exampleDataList"
+        placeholder="Digite nombre del cliente..."
+      />
+      <datalist id="datalistOptions">
+        <option value="Ivan Januario Peña Torres"></option>
+        <option value="Marfin Lucia Contreras Gelvez"></option>
+        <option value="Peggy Peña Contreras"></option>
+        <option value="Azabache Peña Contreras"></option>
+      </datalist>
+    </div>
+
+    <div class="input-group mb-3">
+      <input
+        class="form-control"
+        list="datalistBooks"
+        id="booksDataList"
+        placeholder="Digite nombre del libro a agregar.."
+      />
+      <datalist id="datalistBooks">
+        <option value="Harry Potter 1"></option>
+        <option value="Harry Potter 2"></option>
+        <option value="Harry Potter 3"></option>
+        <option value="Harry Potter 4"></option>
+        <option value="Harry Potter 5"></option>
+        <option value="Harry Potter 6"></option>
+        <option value="Harry Potter 7"></option>
+        <option value="Creaturas fantásticas"></option>
+      </datalist>
+
+      <a href="#" class="btn background-button"
+        ><i class="bi bi-cart-plus-fill"></i> Añadir al carrito</a
+      >
+    </div>
+
+    <h5>Carrito de Compras</h5>
+
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th scope="col">Libro</th>
+          <th scope="col">Costo Unitario</th>
+          <th scope="col">Opciones</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">Harry Potter y el prisioner de Azkaban</th>
+          <td>$ 34.000,00</td>
+          <td>
+            <button type="button" class="btn btn-danger">
+              <i class="bi bi-trash-fill"></i>
+            </button>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">Harry Potter y las reliquias de la muerte</th>
+          <td>$ 47.000,00</td>
+          <td>
+            <button type="button" class="btn btn-danger">
+              <i class="bi bi-trash-fill"></i>
+            </button>
+          </td>
+        </tr>
+        <tr>
+          <th>Total</th>
+          <td>$ 81.000,00</td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
+
+    <a href="#" class="btn btn-lg btn-success"
+      ><i class="bi bi-cart-check"></i> Finalizar Compra</a
+    >
+  </div>
+</div>
